--- a/programs/zk-escrow/Cargo.toml
+++ b/programs/zk-escrow/Cargo.toml
@@ -14,9 +14,11 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 
 [dependencies]
-anchor-lang = "0.31.0"
-
+anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
+light-compressed-token = {version = "1.2.0", features = ["cpi"]}
+light-compressed-account = {version = "0.2.0", features = ["anchor"]}
+light-sdk = "0.12.0"
