--- a/programs/zk-escrow/Cargo.toml
+++ b/programs/zk-escrow/Cargo.toml
@@ -9,7 +9,8 @@ crate-type = ["cdylib", "lib"]
 name = "zk_escrow"
 
 [features]
-default = []
+custom-heap = []
+default = ["custom-heap", "idl-build"]
 cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
