fix: rust anaylzer issue

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -12,7 +12,7 @@ zk_escrow = "7zr6gKJdnQQgA1mbpQXdu5KFabH2wfGqQEg88Dk1MuEs"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
