--- a/programs/zk-escrow/Cargo.toml
+++ b/programs/zk-escrow/Cargo.toml
@@ -23,3 +23,5 @@ anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
 light-compressed-token = {version = "1.2.0", features = ["cpi"]}
 light-compressed-account = {version = "0.2.0", features = ["anchor"]}
 light-sdk = "0.12.0"
+light-system-program = "1.2.0"
+solana-program = "2.2.1"
